--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success shadow fixed-top">
       <div class="container-fluid">
         <img src="gambar/logo1.png" alt="" class="logo1" />
-        <a class="navbar-brand ps-1" href="#">Arsip Dinas Kehutanan Maluku Utara</a>
+        <a class="navbar-brand ps-1 fs-6" href="#">Arsip Dinas Kehutanan Maluku Utara</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
