tambahkan link industri aktif index.html

--- a/index.html
+++ b/index.html
@@ -59,64 +59,64 @@
       <div class="card">
         <div class="card-header">Halmahera Utara</div>
         <div class="card-body">
-          <a href="https://www.facebook.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/1dxx2yQ66joXwu60VdSNRjOcOEFszynoo?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Halmahera Barat</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/1dxx2yQ66joXwu60VdSNRjOcOEFszynoo?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Halmahera Tengah</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/12F1T6-9uqlApkzPuGaVf2sog1DvjlFOp?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Halmahera Timur</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/18Om18iP_exH_UbZg0BSy4koYM6zAc1Lx?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Halmahera Selatan</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Tidore Kepulauan</div>
         <div class="card-body">
           <a href="https://drive.google.com/drive/folders/1YqfrrK0GaimryNr4HMdocYjkAnFOOt_H?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Pulau Morotai</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/1Cxa1xnxP-nVbMfVcc8r5ErS3DxS4d7vd?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Kepulauan Sula</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/18keiTlu-wuqB5WtdRy5UryWQvrhc8G__?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Pulau Taliabu</div>
         <div class="card-body">
           <a href="https://drive.google.com/file/d/1cZfQyFJ1jlUj5fKLLn_O3u4o9ZIVBtS_/view?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="burung1">
