--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>SIPUT MALUT</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success shadow fixed-top">
       <div class="container-fluid">
         <img src="gambar/logo1.png" alt="" class="logo1" />
-        <a class="navbar-brand ps-1" href="#">Arsip Dinas Kehutanan Maluku Utara</a>
+        <a class="navbar-brand ps-1 fs-6" href="#">Arsip Dinas Kehutanan Maluku Utara</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,64 +59,64 @@
       <div class="card">
         <div class="card-header">Halmahera Utara</div>
         <div class="card-body">
-          <a href="https://www.facebook.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/1dxx2yQ66joXwu60VdSNRjOcOEFszynoo?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Halmahera Barat</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/1dxx2yQ66joXwu60VdSNRjOcOEFszynoo?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Halmahera Tengah</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/12F1T6-9uqlApkzPuGaVf2sog1DvjlFOp?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Halmahera Timur</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/18Om18iP_exH_UbZg0BSy4koYM6zAc1Lx?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Halmahera Selatan</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Tidore Kepulauan</div>
         <div class="card-body">
           <a href="https://drive.google.com/drive/folders/1YqfrrK0GaimryNr4HMdocYjkAnFOOt_H?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Pulau Morotai</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/1Cxa1xnxP-nVbMfVcc8r5ErS3DxS4d7vd?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Kepulauan Sula</div>
         <div class="card-body">
-          <a href="https://www.google.com" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="https://drive.google.com/drive/folders/18keiTlu-wuqB5WtdRy5UryWQvrhc8G__?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <div class="card">
         <div class="card-header">Pulau Taliabu</div>
         <div class="card-body">
           <a href="https://drive.google.com/file/d/1cZfQyFJ1jlUj5fKLLn_O3u4o9ZIVBtS_/view?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="https://www.youtube.com" class="btn btn-primary card-link">Tidak Aktif</a>
+          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="burung1">
