--- a/index.html
+++ b/index.html
@@ -12,11 +12,26 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success shadow fixed-top">
       <div class="container-fluid">
-        <img src="gambar/logo1.png" alt="" class="logo1" />
-        <a class="navbar-brand ps-1 fs-6" href="#">Arsip Dinas Kehutanan Maluku Utara</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col">
+              <div class="d-flex align-items-center">
+                <img src="gambar/logo1.png" alt="" class="logo1" />
+                <div class="navbar-brand ps-1 fs-6">
+                  <div class="d-flex flex-column flex-md-row align-items-md-center">
+                    <span class="me-md-2 mb-2 mb-md-0">Arsip Dinas Kehutanan</span>
+                    <span>Maluku Utara</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+          </div>
+        </div>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
