--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <img src="gambar/logo1.png" alt="" class="logo1" />
                 <div class="navbar-brand ps-1 fs-6">
                   <div class="d-flex flex-column flex-md-row align-items-md-center">
-                    <span class="me-md-2 mb-2 mb-md-0">Arsip Dinas Kehutanan</span>
-                    <span>Maluku Utara</span>
+                    <span class="me-md-2 mb-2 mb-md-0">Arsip Izin Industri</span>
+                    <span>Dinas Kehutanan Maluku Utara</span>
                   </div>
                 </div>
               </div>
