Memperbaiki posisi navbar dan tombol toggle

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 <img src="gambar/logo1.png" alt="" class="logo1" />
                 <div class="navbar-brand ps-1 fs-6">
                   <div class="d-flex flex-column flex-md-row align-items-md-center">
-                    <span class="me-md-2 mb-2 mb-md-0">Arsip Izin Industri</span>
-                    <span>Dinas Kehutanan Maluku Utara</span>
+                    <span class="me-md-2 mb-2 mb-md-0">Arsip Izin Industri Dinas</span>
+                    <span>Kehutanan Maluku Utara</span>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-auto">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="col-auto ms-auto">
+              <button class="navbar-toggler p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
             </div>
@@ -47,6 +47,7 @@
         </div>
       </div>
     </nav>
+
     <!-- tutup navbar -->
 
     <!-- jumbotron -->
