Memperbaiki seluruh tampilan website

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto" style="text-align: right">
-            <li class="nav-item">
+            <li class="nav-item bg-body-primary">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
@@ -51,15 +51,18 @@
     <!-- tutup navbar -->
 
     <!-- jumbotron -->
-    <section class="jumbotron jumbotron-fluid">
-      <br /><br /><br /><br /><br /><br /><br /><br />
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#fff"
-          fill-opacity="1"
-          d="M0,320L48,293.3C96,267,192,213,288,202.7C384,192,480,224,576,250.7C672,277,768,299,864,288C960,277,1056,235,1152,218.7C1248,203,1344,213,1392,218.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
+    <section class="jumbotron">
+      <div class="container">
+        <div class="row">
+          <div class="col-md">
+            <img src="gambar/jumbotron.png" alt="gambar" class="img-thumbnail mb-4" />
+          </div>
+          <div class="col-md">
+            <h1 class="display-4">SELAMAT DATANG PADA LAYANAN WEBSITE SIPUT MALUT</h1>
+            <p class="lead">SIPUT MALUT merupakan layananan Arsip Izin Industri secara online yang ada pada Dinas Kehutanan Maluku Utara</p>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- tutup jumbotron -->
 
@@ -68,80 +71,105 @@
       <div class="container">
         <div class="row text-center text-muted mb-3">
           <div class="col">
-            <h2>DOKUMEN IZIN INIDUSTRI</h2>
+            <h2 class="text-dark">DOKUMEN IZIN INIDUSTRI</h2>
           </div>
         </div>
       </div>
-      <div class="card">
-        <div class="card-header">Halmahera Utara</div>
-        <div class="card-body">
-          <a href="https://drive.google.com/drive/folders/1dxx2yQ66joXwu60VdSNRjOcOEFszynoo?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-3">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Halmahera Utara</h5>
+                <p class="card-text">Terdapat 5 Izin Industri yang masih aktif</p>
+                <a href="https://drive.google.com/drive/folders/1dxx2yQ66joXwu60VdSNRjOcOEFszynoo?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+                <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Halmahera Barat</h5>
+                <p class="card-text">Terdapat 4 Izin Industri yang masih aktif</p>
+                <a href="https://drive.google.com/drive/folders/1dxx2yQ66joXwu60VdSNRjOcOEFszynoo?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+                <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Halmahera Tengah</h5>
+                <p class="card-text">Terdapat 4 Izin Industri yang masih aktif</p>
+                <a href="https://drive.google.com/drive/folders/12F1T6-9uqlApkzPuGaVf2sog1DvjlFOp?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+                <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Halmahera Timur</h5>
+                <p class="card-text">Terdapat 12 Izin Industri yang masih aktif</p>
+                <a href="https://drive.google.com/drive/folders/18Om18iP_exH_UbZg0BSy4koYM6zAc1Lx?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+                <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Halmahera Selatan</h5>
+                <p class="card-text">Terdapat 27 Izin Industri yang masih aktif</p>
+                <a href="#" class="btn btn-primary card-link">Aktif</a>
+                <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Pulau Morotai</h5>
+                <p class="card-text">Terdapat 3 Izin Industri yang masih aktif</p>
+                <a href="https://drive.google.com/drive/folders/1Cxa1xnxP-nVbMfVcc8r5ErS3DxS4d7vd?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+                <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Kepulauan Sula</h5>
+                <p class="card-text">Terdapat 3 Izin Industri yang masih aktif</p>
+                <a href="https://drive.google.com/drive/folders/18keiTlu-wuqB5WtdRy5UryWQvrhc8G__?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+                <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Pulau Taliabu</h5>
+                <p class="card-text">Terdapat 6 Izin Industri yang masih aktif</p>
+                <a href="https://drive.google.com/file/d/1cZfQyFJ1jlUj5fKLLn_O3u4o9ZIVBtS_/view?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+                <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Kota Tidore Kepulauan</h5>
+                <p class="card-text">Terdapat 5 Izin Industri yang masih aktif</p>
+                <a href="https://drive.google.com/drive/folders/1YqfrrK0GaimryNr4HMdocYjkAnFOOt_H?usp=sharing" class="btn btn-primary card-link">Aktif</a>
+                <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="card">
-        <div class="card-header">Halmahera Barat</div>
-        <div class="card-body">
-          <a href="https://drive.google.com/drive/folders/1dxx2yQ66joXwu60VdSNRjOcOEFszynoo?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header">Halmahera Tengah</div>
-        <div class="card-body">
-          <a href="https://drive.google.com/drive/folders/12F1T6-9uqlApkzPuGaVf2sog1DvjlFOp?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header">Halmahera Timur</div>
-        <div class="card-body">
-          <a href="https://drive.google.com/drive/folders/18Om18iP_exH_UbZg0BSy4koYM6zAc1Lx?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header">Halmahera Selatan</div>
-        <div class="card-body">
-          <a href="#" class="btn btn-primary card-link">Aktif</a>
-          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header">Tidore Kepulauan</div>
-        <div class="card-body">
-          <a href="https://drive.google.com/drive/folders/1YqfrrK0GaimryNr4HMdocYjkAnFOOt_H?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header">Pulau Morotai</div>
-        <div class="card-body">
-          <a href="https://drive.google.com/drive/folders/1Cxa1xnxP-nVbMfVcc8r5ErS3DxS4d7vd?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header">Kepulauan Sula</div>
-        <div class="card-body">
-          <a href="https://drive.google.com/drive/folders/18keiTlu-wuqB5WtdRy5UryWQvrhc8G__?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header">Pulau Taliabu</div>
-        <div class="card-body">
-          <a href="https://drive.google.com/file/d/1cZfQyFJ1jlUj5fKLLn_O3u4o9ZIVBtS_/view?usp=sharing" class="btn btn-primary card-link">Aktif</a>
-          <a href="#" class="btn btn-primary card-link">Tidak Aktif</a>
-        </div>
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="burung1">
-        <path
-          fill="#fff"
-          fill-opacity="1"
-          d="M0,128L48,138.7C96,149,192,171,288,186.7C384,203,480,213,576,213.3C672,213,768,203,864,181.3C960,160,1056,128,1152,122.7C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"
-        ></path>
-      </svg>
+      <br /><br /><br /><br /><br /><br />
     </section>
     <!-- tutup industri -->
 
